--- a/app/src/main/res/layout/activity_imccalculo.xml
+++ b/app/src/main/res/layout/activity_imccalculo.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#45464A"
     tools:context=".IMCCalculo">
 
 
@@ -17,7 +16,7 @@
         android:gravity="center"
         android:text="0"
         android:textSize="40sp"
-        android:textColor="#FBFAFA"
+        android:textColor="#EFEEF3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +30,7 @@
         android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:text="diagnostico"
-        android:textColor="#FBFAFA"
+        android:textColor="#474649"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Altura"
-        android:textColor="#ffff"
+        android:textColor="#474649"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/inputHeight"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,12 +115,25 @@
         android:layout_height="wrap_content"
         android:text="Peso"
         android:textStyle="bold"
-        android:textColor="#ffff"
+        android:textColor="#474649"
         app:layout_constraintBottom_toTopOf="@+id/inputWeight"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.974" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Switch"
+        app:layout_constraintBottom_toTopOf="@+id/textMCI"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.658"
+        tools:layo="161dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
