--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="mi_color_verde">#2EFE2E</color>
+    <color name="bg_splash_screen">#FFD6C3C3</color>
 </resources>
